2007-08-29  Paf <paf@tuxfamily.org>
	* src/core/src/sourcefile.cpp: Fix a bug found by Soax

2007-08-24  Paf <paf@tuxfamily.org>
	* src/core/Makefile: Add boost::filesystem library
	* src/core/include/sourcefile.h: Replace dirent.h use by boost::filesystem

2007-08-23  Paf <paf@tuxfamily.org>
	* README: Replace references to Viracocha by Gnoll
	* src/core/tests/testpo.cpp: Update tests coverage
	* src/core/include/sourcefile.h: Update class regarding new method added to
	the class ISource. This add a new method to create writeable streams
	* src/core/include/basemanager.h: Fix some bugs and update accordingly to
	the new interface of the class ISource
	* src/core/include/isource.h: load() renamed to loadStream() and added
	saveStream(). So there will be no more confusion. loadStream() creates
	streams to read from and saveStream() creates streams to write to
	* src/core/src/sourcefile.cpp: Update methods accordingly to the new
	interface of the class ISource and thus SourceFile

2007-08-21  Paf <paf@tuxfamily.org>
	* doc/design/architecture.odt: Update design document about PersistentObject, BaseManager, IStream and ISource

2007-08-19  Paf <paf@tuxfamily.org>
	* configure.ac: Project name and contact address updated

2007-08-18  Paf <paf@tuxfamily.org>
	* src/core/src/persistentobjectmanager.cpp: Update comments
	* src/core/src/sourcefile.cpp: Implement SourceFile::isFetchable() method
	* src/core/src/persistentobject.cpp: Update comments
	* src/core/src/filestream.cpp: Update comments

2007-08-16  Paf <paf@tuxfamily.org>
	* src/core/include/integer.h: Update comments
	* src/core/include/istream.h: Update comments
	* src/core/include/scalar.h: Update comments
	* src/core/include/isource.h: Update comments
	* src/core/include/iattributehandler.h: Update comments
	* src/core/include/integerattributehandler.h: Update comments
	* src/core/include/persistentobjectmanager.h: Update comments
	* src/core/include/persistentobject.h: Update comments